// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue > . 1`] = `
[
  "@layer utilities {
  /* caslon-utilities: global:container */
  :global(.global\\:container) {
    width: 100%;
    @media (width >= 640px) {
      max-width: 640px;
    }
    @media (width >= 768px) {
      max-width: 768px;
    }
    @media (width >= 1024px) {
      max-width: 1024px;
    }
    @media (width >= 1280px) {
      max-width: 1280px;
    }
    @media (width >= 1536px) {
      max-width: 1536px;
    }
  }
}
",
]
`;

exports[`vue > . 2`] = `
[
  "@layer utilities {
  /* caslon-utilities: slotted:container */
  :slotted(.slotted\\:container) {
    width: 100%;
    @media (width >= 640px) {
      max-width: 640px;
    }
    @media (width >= 768px) {
      max-width: 768px;
    }
    @media (width >= 1024px) {
      max-width: 1024px;
    }
    @media (width >= 1280px) {
      max-width: 1280px;
    }
    @media (width >= 1536px) {
      max-width: 1536px;
    }
  }
}
",
]
`;

exports[`vue > . 3`] = `
[
  "@layer utilities {
  /* caslon-utilities: deep:container */
  :deep(.deep\\:container) {
    width: 100%;
    @media (width >= 640px) {
      max-width: 640px;
    }
    @media (width >= 768px) {
      max-width: 768px;
    }
    @media (width >= 1024px) {
      max-width: 1024px;
    }
    @media (width >= 1280px) {
      max-width: 1280px;
    }
    @media (width >= 1536px) {
      max-width: 1536px;
    }
  }
}
",
]
`;
